objects/maps__Location__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__AddressFields__c</fullName>
        <label>AddressFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__FavoriteMarker__c</fullName>
        <label>Favorite Marker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__IsEnd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__IsSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__IsStart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MapsFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Maps Locations</relationshipLabel>
        <relationshipName>MapsLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__ResourceId__c</fullName>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MAPSLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Location</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>